more z-index fixes for jbei's dialog use case

--- a/src/style.css
+++ b/src/style.css
@@ -17,10 +17,9 @@
 }
 .pt-toast-container,
 .basicContext,
+.pt-overlay-content,
+.pt-overlay,
 .basicContextContainer,
 .pt-dialog {
-  z-index: 4000 !important;
-}
-.pt-overlay-content {
   z-index: 4000 !important;
 }
